fix: Размер видео

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ DEV_GUIDE.txt
 MIGRATION_TO_POSTGRESQL.md
 ARCHITECTURE_AND_LEARNING.md
 ARCHITECTURE_IMPROVEMENTS.md
-*.md
+MONETIZATION_PLAN.md
 *.txt
 
 # Configs (local only)
