--- a/MemAlerts.Server/MemAlerts.Server.csproj
+++ b/MemAlerts.Server/MemAlerts.Server.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
     <None Update="config.json">
@@ -7,6 +7,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <ProjectReference Include="..\MemAlerts.Shared\MemAlerts.Shared.csproj" />
   </ItemGroup>
 
