--- a/MemAlerts.Server/MemAlerts.Server.csproj
+++ b/MemAlerts.Server/MemAlerts.Server.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Dapper" Version="2.1.28" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
     <ProjectReference Include="..\MemAlerts.Shared\MemAlerts.Shared.csproj" />
   </ItemGroup>
 
